# demo-python-project

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  poetry.toml  pyproject.toml
docs/apidoc/: APIDOC-HEADER.md  index.html  index.md
src/: index.py
src/api/: api_response.py  routes.py
src/app/: config.py  helper.py  logger.py
